# ScalFMM

./: .clang-format  .gitignore  CMakeLists.txt  LICENCE  Licence.txt  NEWS.txt  README.md  README.txt  ScalFMMConfig.cmake.in  TODO.txt  ToDO  compile_dag_result.sh  email-sorted  export_orgmode.sh  export_tarbal.sh  implicit.org
Addons/FmmApi/: CMakeLists.txt
Addons/HMat/: CMakeLists.txt
Doc/: CMakeLists.txt  Classes.dia  Doxyfile  Doxyfile.in  ParallelDetails.tex  ProgrammingRules.txt  ScalFmmStarpu.tex  StyleGuide.html  Suggestions.txt  scalfmm_vtk.cpp  testFmbVtk.cpp
Doc/Notes/: adaptiveFMM.tex  distribution.tex  ellipsoidUnif.eps  plummer3D.eps  plummerHistogramme.eps  prolate.eps
Doc/Site_dox/: FContact.dox  FDownload.dox  FExamples.dox  FInterpolationFMM.dox  FLicense.dox  FP2P.dox  FPeriodic.dox  FProgrammingRules.dox  FQuick.dox  MainPage.dox
Doc/Src_tex/: ParallelDetails.tex
Doc/Stages/: ebauche.tar.bz2
Doc/Starpu/: ScalFmmStarpu.tex  starpu-draw.odg
Sources/: CMakeLists.txt  ScalFMM_config.h.cmake
Sources/Components/: FAbstractCell.hpp  FAbstractKernels.hpp  FAbstractLeaf.hpp  FAbstractParticle.hpp  FAbstractParticule.hpp  FBasicCell.hpp  FBasicKernels.hpp  FBasicParticle.hpp  FFmaParticle.hpp  FSimpleLeaf.hpp  FTestKernels.hpp  FTestParticle.hpp  FTestParticule.hpp  FTypedLeaf.hpp
Sources/Containers/: FList.hpp  FOctree.hpp  FSubOctree.hpp  FTreeCoordinate.hpp
Sources/Core/: FAbstractCell.hpp  FAbstractKernels.hpp  FAbstractParticule.hpp  FBasicCell.hpp  FBasicKernels.hpp  FBasicParticule.hpp  FExtendForces.hpp  FExtendPosition.hpp  FExtendPotential.hpp  FExtendValue.hpp  FFMMAlgorithm.hpp  FFMMAlgorithmArray.hpp  FFMMAlgorithmTask.hpp  FFMMAlgorithmThreaded.hpp  FFMMAlgorithmThreadedInterval.hpp  FFMMAlgorithmToS.hpp  FFmaParticule.hpp  FFmbKernels.hpp  FFmmAlgorithm.hpp  FFmmAlgorithmArray.hpp  FFmmAlgorithmArrayTsm.hpp  FFmmAlgorithmArrayUs.hpp  FFmmAlgorithmTask.hpp  FFmmAlgorithmThread.hpp  FFmmAlgorithmThreadProc.hpp  FFmmAlgorithmThreadTsm.hpp  FFmmAlgorithmThreadUs.hpp  FFmmAlgorithmThreaded.hpp  FFmmAlgorithmToS.hpp  FFmmAlgorithmTsm.hpp  FSimpleKernels.hpp  FTestCell.hpp  FTestKernels.hpp
Sources/Extenssions/: FExtendCellType.hpp  FExtendMortonIndex.hpp  FExtendParticleType.hpp  FExtendParticuleType.hpp
Sources/FJ/: FFJKernels.hpp
Sources/Files/: FAbstractLoader.hpp  FBasicLoader.hpp  FFMALoader.hpp  FFMAToRLoader.hpp  FFMAToSLoader.hpp  FFMATsmLoader.hpp  FFmaLoader.hpp  FFmaScanfLoader.hpp
Sources/Fmb/: FAbstractFmbKernels.hpp  FExtendFmbCell.hpp  FFmbKernels.hpp  FFmbKernelsBlas.hpp  FFmbKernelsBlockBlas.hpp  FFmbKernelsForces.hpp  FFmbKernelsPotential.hpp  FFmbKernelsPotentialForces.hpp  FFmbKernelsPotentialForcesTsm.hpp
Sources/Utils/: F3DPosition.hpp  FAbstractApplication.hpp  FAbstractThread.hpp  FAbstractThreaded.hpp  FAssertable.cpp  FAssertable.hpp  FBlas.hpp  FComplexe.hpp  FConvert.hpp  FDebug.cpp  FDebug.hpp  FGlobal.hpp  FMath.hpp  FMpiApplication.hpp  FNoThread.hpp  FNoThreaded.hpp  FOpenMPThread.hpp  FOpenMPThreaded.hpp  FPosixThread.hpp  FPosixThreaded.hpp  FSingleApplication.hpp  FTic.hpp  FTrace.cpp  FTrace.hpp
Src/: CMakeLists.txt  ScalFmmConfig.h.cmake
Src/Adaptative/: FAbstractAdaptativeKernel.hpp  FAbstractAdaptiveKernel.hpp  FAdaptiveCell.hpp  FAdaptiveKernelWrapper.hpp
Src/AdaptativeTree/: FAdaptCell.hpp  FAdaptSeqAlgorithm.hpp  FAdaptTools.hpp
Src/Adaptive/: FAbstractAdaptiveKernel.hpp  FAdaptChebSymKernel.hpp  FAdaptTools.hpp  FAdaptUnifKernel.hpp  FAdaptiveCell.hpp  FAdaptiveKernelWrapper.hpp  FAdaptivePrintKernel.hpp  FAdaptiveTestKernel.hpp
Src/AdaptiveTree/: FAdaptCell.hpp  FAdaptChebSymKernel.hpp  FAdaptSeqAlgorithm.hpp  FAdaptTools.hpp  FAdaptUnifKernel.hpp
Src/Arranger/: FAbstractLeafInterface.hpp  FAbstractMover.hpp  FArrangerPeriodic.hpp  FBasicParticleContainerIndexedMover.hpp  FBasicParticleContainerMover.hpp  FOctreeArranger.hpp  FOctreeArrangerProc.hpp  FParticleTypedIndexedMover.hpp
Src/BalanceTree/: FAbstractBalanceAlgorithm.hpp  FChebBalanceSymKernel.hpp  FChebSymCostKernel.hpp  FCostCell.hpp  FCostZones.hpp  FDumbCostKernel.hpp  FEqualize.hpp  FFmmAlgorithmThreadBalanced.hpp  FLeafBalance.hpp  FParticlesBalance.hpp  FPartitionsMapping.hpp
Src/Chebyshev/: FChebCell.hpp  (+14 more)
Tests/: CMakeLists.txt  FDebug.out  gmon.out  testApplication.cpp  testAssert.cpp  testBlas.cpp  testChebAlgorithm.cpp  testChebBinaryM2L.cpp  testChebInterpolator.cpp  testChebM2Lprecomputation.cpp  testChebOctree.cpp  testChebSxUCBSy.cpp  testChebSymmetries.cpp  testCompareIOTree.cpp  testCompareKernels.cpp  testDebug.cpp  testFMMAlgorithm.cpp  testFMMAlgorithmThreaded.cpp  testFMMAlgorithmToS.cpp  testFmbAlgorithm.cpp  testFmbAlgorithmProc.cpp  testFmbBlasAlgorithm.cpp  testFmbBlockBlasAlgorithm.cpp  testFmbEwalAlgorithm.cpp  testFmbGalaxyCsv.cpp  testFmbRotation.cpp  testFmbRotationAlgorithm.cpp  testFmbToRAlgorithm.cpp  testFmbToSAlgorithm.cpp  testFmbTsmAlgorithm.cpp  testFmbTsmNoTsm.cpp  testFmmAlgorithm.cpp  testFmmAlgorithmPeriodic.cpp  testFmmAlgorithmProc.cpp  testFmmAlgorithmProcPeriodic.cpp  testFmmAlgorithmToS.cpp  testFmmAlgorithmTsm.cpp  testFmmDemonstration.cpp  testLoader.cpp  testLoaderCreate.cpp  (+34 more)
UTests/: CMakeLists.txt  FUKernelTester.hpp  FUTester.hpp  flistUTest.cpp  testUTest.cpp  utestAlgorithmBuilder.cpp  utestAlignedMemory.cpp  utestBoolArray.cpp  utestBuffer.cpp  utestChebyshev.cpp  utestChebyshevAdaptative.cpp  utestChebyshevDirect.cpp  utestChebyshevDirectPeriodic.cpp  utestChebyshevDirectTsm.cpp  utestChebyshevMpi.cpp  utestChebyshevMultiRhs.cpp  utestChebyshevThread.cpp  utestConvert.cpp  utestFmb.cpp  utestFmbDirect.cpp  utestFmbDirectPeriodic.cpp  utestFmmAlgorithmProc.cpp  utestInterpolationMultiRhs.cpp  utestLagrange.cpp  utestLagrangeMpi.cpp  utestLagrangeThread.cpp  utestList.cpp  utestListBlockAllocator.cpp  utestMorton.cpp  utestMpiBitonic.cpp  utestMpiQs.cpp  utestMpiTreeBuilder.cpp  utestNeighborIndexes.cpp  utestOctree.cpp  utestP2PExclusion.cpp  utestParameters.cpp  utestQuicksort.cpp  utestRotation.cpp  utestRotationDirect.cpp  utestRotationDirectDebug.cpp  (+12 more)
(+879 files in other folders)
